<resources>
    <string name="app_name">WashBabyStaff</string>
    <string name="Login">登录</string>
    <string name="Login1">登陆</string>
    <string name="Signup">注册</string>
    <string name="password">密码:</string>
    <string name="phonenumber">手机号:</string>
    <string name="yzcode">验证码:</string>
    <string name="getyzcode">获取验证码</string>
    <string name="getoderper">接单人员</string>
    <string name="finish">完成</string>
    <string name="workper">加工人员</string>
    <string name="noworder">立即订单</string>
    <string name="yueorder">预约订单</string>
    <string name="accountnumber">账号:</string>
    <string name="peoplecode">员工号:</string>
    <string name="name">姓名:</string>
    <string name="percode">工号:123456</string>
    <string name="orderdetail">订单详情</string>
    <string name="newstaffzc">新员工注册</string>
    <string name="forgetpassword">忘记密码?</string>
    <string name="alreadyorder">已接订单</string>
    <string name="bringorder">送货订单</string>
    <string name="afinishorder">完成订单</string>
    <string name="mycenter">个人中心</string>
    <string name="startwork">开始处理</string>
    <string name="megcenter">消息中心</string>
    <string name="megdetail">消息详情</string>
    <string name="callmain">联系总部</string>
    <string name="exit">退出登录</string>
    <string name="listcode">订单编号:123456</string>
    <string name="nowlist">即时单</string>
    <string name="yuyuelist">预约单</string>
    <string name="testaddress">美成逸家</string>
    <string name="startsao">开始扫描</string>
    <string name="clothescode">衣物编号：</string>
    <string name="beizhu">备注:</string>
    <string name="saomiao">扫描</string>
    <string name="changeprice">改价</string>
    <string name="delete">删除</string>
    <string name="outofkulist">出库列表</string>
    <string name="clothesmsg">衣物信息</string>
    <string name="continuesm">继续扫码</string>
    <string name="troubleask">错误提示</string>
    <string name="yes">确定</string>
    <string name="yes2">确认</string>
    <string name="listcontent">订单内容</string>
    <string name="yuyuetime">预约时间</string>

    //测试用
    <string name="lianxitest">联系电话：15181051314</string>
    <string name="nametest">姓名：张三</string>
    <string name="testaddres">取件地址：成都市东门大桥时代1号</string>
</resources>
