<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:id="@+id/main"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context="com.example.hongxingkeji.washbabystaff.ui.Activity.SaoMiaoActivity">
    <LinearLayout
        android:id="@+id/title"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height50"
        android:orientation="horizontal"
        android:background="@color/blue"
        >
        <TextView
            android:id="@+id/titlename"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:text="@string/startsao"
            android:gravity="center"
            android:textSize="@dimen/LogintextSzie"
            android:textColor="@color/white"
            />
    </LinearLayout>
    <TextView
        android:layout_below="@id/title"
        android:id="@+id/listcode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/qgray"
        android:padding="@dimen/Padding10"
        android:textColor="@color/black"
        android:textSize="@dimen/font14"
        android:text="@string/listcode"
        android:gravity="center"
        />
    <LinearLayout
        android:layout_below="@id/listcode"
        android:id="@+id/detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font14"
                android:textColor="@color/black"
                android:text="@string/nametest"
                android:drawableRight="@drawable/biuanji"
                android:padding="@dimen/Padding10"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font14"
                android:textColor="@color/black"
                android:padding="@dimen/Padding10"
                android:text="@string/lianxitest"
                android:layout_marginLeft="@dimen/font20"
                />
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/testaddres"
            android:textSize="@dimen/font14"
            android:textColor="@color/black"
            android:gravity="center"
            android:padding="@dimen/Padding10"
            />
    </LinearLayout>
    <ListView
        android:id="@+id/list"
        android:divider="@color/qgray"
        android:dividerHeight="@dimen/Padding15"
        android:layout_below="@id/detail"
        android:layout_width="match_parent"
        android:layout_marginBottom="@dimen/height50"
        android:layout_height="wrap_content"></ListView>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="@dimen/font18"
        android:layout_alignParentBottom="true"
        android:text="@string/yes2"
        android:layout_gravity="bottom"
        android:background="@color/white"
        />
</RelativeLayout>
