<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/Padding10"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/font16"
                android:text="@string/clothescode"/>
            <TextView
                android:id="@+id/weisaomiao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="未扫描"
                android:textColor="@color/red"
                android:textSize="@dimen/font16"
                />
            <TextView
                android:id="@+id/clothertype"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:textSize="@dimen/font16"
                android:text="T恤"
                android:textColor="@color/black"
                />
            <TextView
                android:id="@+id/clotherprice"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font16"
                android:textColor="@color/orange"
                android:layout_marginLeft="@dimen/Padding10"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/Padding10"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font14"
                android:text="@string/beizhu"
                android:textColor="@color/black"
                />
            <TextView
                android:id="@+id/beizhumsg"
                android:textSize="@dimen/font14"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
       <android.support.v7.widget.RecyclerView
           android:id="@+id/recyclerView"
           android:layout_width="match_parent"
           android:padding="@dimen/Padding15"
           android:layout_height="@dimen/height100"></android.support.v7.widget.RecyclerView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/gray"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/writebz"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:textSize="@dimen/font18"
                android:gravity="center"
                android:background="@color/white"
                android:text="填写备注"
                android:layout_margin="0.5dp"
                />
            <TextView
                android:id="@+id/saomiao"
                android:layout_width="0dp"
                android:background="@color/white"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:textSize="@dimen/font18"
                android:gravity="center"
                android:text="@string/saomiao"
                android:layout_margin="0.5dp"
                />
            <TextView
                android:id="@+id/changeprice"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:textSize="@dimen/font18"
                android:gravity="center"
                android:text="@string/changeprice"
                android:background="@color/lightorange"
                />
            <TextView
                android:id="@+id/delete"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:textSize="@dimen/font18"
                android:gravity="center"
                android:text="@string/delete"
                android:background="@color/lightred"
                />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>