<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@drawable/zu"
    tools:context=".ui.Activity.ForgetPasswordActivity">
    <LinearLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height50"
        android:orientation="horizontal"
        >
        <ImageView
            android:id="@+id/signupback"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="match_parent"
            android:src="@drawable/back"
            android:gravity="center_vertical"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:text="@string/Login"
            android:gravity="center"
            android:textSize="@dimen/LogintextSzie"
            android:textColor="@color/black"
            />
        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/signup_order"
        android:layout_below="@id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:padding="@dimen/Padding10"
            android:layout_height="wrap_content"
            android:background="@drawable/shape">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phonenumber"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font16"
                    android:padding="@dimen/Padding5"
                    />
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:background="@null"
                    style="?android:attr/textViewStyle"
                    />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    />
            </LinearLayout>
            <View
                android:layout_width="wrap_content"
                android:layout_height="@dimen/height1"
                android:background="@color/white"
                android:paddingLeft="@dimen/height30"
                android:paddingRight="@dimen/height30"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/yzcode"
                    android:gravity="center_vertical"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font16"
                    android:padding="@dimen/Padding5"
                    />
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:background="@null"
                    style="?android:attr/textViewStyle"
                    />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/getyzcode"
                    android:textSize="@dimen/font14"
                    android:background="@drawable/btbk"
                    />
            </LinearLayout>
            <View
                android:layout_width="wrap_content"
                android:layout_height="@dimen/height1"
                android:background="@color/white"
                android:paddingLeft="@dimen/height30"
                android:paddingRight="@dimen/height30"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font16"
                    android:padding="@dimen/Padding5"
                    />
                <EditText
                    android:id="@+id/login_edpw"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:inputType="textPassword"
                    android:background="@null"
                    style="?android:attr/textViewStyle"
                    />
                <ImageView
                    android:id="@+id/mima_img"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:padding="@dimen/Padding5"
                    android:paddingTop="@dimen/Padding10"
                    android:src="@drawable/kejian"
                    />
            </LinearLayout>
        </LinearLayout>
        <Button
            android:id="@+id/bt_sign"
            android:layout_marginTop="@dimen/height30"
            android:text="@string/finish"
            android:background="@drawable/btbk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</RelativeLayout>
